Bug 946068 - Fix composition events' synthesizing in chrome process. r=masayuki