widget/TextEvents.h
@@ -32,6 +32,8 @@ enum
 
 #undef NS_DEFINE_VK
 
+#define kLatestSeqno UINT32_MAX
+
 namespace mozilla {
 
 namespace dom {
@@ -179,18 +181,25 @@ private:
   friend class plugins::PPluginInstanceChild;
 
   WidgetTextEvent()
+    : mSeqno(kLatestSeqno)
+    , rangeCount(0)
+    , rangeArray(nullptr)
+    , isChar(false)
   {
   }
 
 public:
-  uint32_t seqno;
+  uint32_t mSeqno;
 
 public:
   virtual WidgetTextEvent* AsTextEvent() MOZ_OVERRIDE { return this; }
 
-  WidgetTextEvent(bool aIsTrusted, uint32_t aMessage, nsIWidget* aWidget) :
-    WidgetGUIEvent(aIsTrusted, aMessage, aWidget, NS_TEXT_EVENT),
-    rangeCount(0), rangeArray(nullptr), isChar(false)
+  WidgetTextEvent(bool aIsTrusted, uint32_t aMessage, nsIWidget* aWidget)
+    : WidgetGUIEvent(aIsTrusted, aMessage, aWidget, NS_TEXT_EVENT)
+    , mSeqno(kLatestSeqno)
+    , rangeCount(0)
+    , rangeArray(nullptr)
+    , isChar(false)
   {
   }
 
@@ -230,11 +239,12 @@ private:
   friend class mozilla::dom::PBrowserChild;
 
   WidgetCompositionEvent()
+    : mSeqno(kLatestSeqno)
   {
   }
 
 public:
-  uint32_t seqno;
+  uint32_t mSeqno;
 
 public:
   virtual WidgetCompositionEvent* AsCompositionEvent() MOZ_OVERRIDE
@@ -243,8 +253,9 @@ public:
   }
 
   WidgetCompositionEvent(bool aIsTrusted, uint32_t aMessage,
-                         nsIWidget* aWidget) :
-    WidgetGUIEvent(aIsTrusted, aMessage, aWidget, NS_COMPOSITION_EVENT)
+                         nsIWidget* aWidget)
+    : WidgetGUIEvent(aIsTrusted, aMessage, aWidget, NS_COMPOSITION_EVENT)
+    , mSeqno(kLatestSeqno)
   {
     // XXX compositionstart is cancelable in draft of DOM3 Events.
     //     However, it doesn't make sense for us, we cannot cancel composition
@@ -389,12 +400,18 @@ private:
   friend class mozilla::dom::PBrowserChild;
 
   WidgetSelectionEvent()
+    : mSeqno(kLatestSeqno)
+    , mOffset(0)
+    , mLength(0)
+    , mReversed(false)
+    , mExpandToClusterBoundary(true)
+    , mSucceeded(false)
   {
     MOZ_CRASH("WidgetSelectionEvent is created without proper arguments");
   }
 
 public:
-  uint32_t seqno;
+  uint32_t mSeqno;
 
 public:
   virtual WidgetSelectionEvent* AsSelectionEvent() MOZ_OVERRIDE
@@ -402,9 +419,14 @@ public:
     return this;
   }
 
-  WidgetSelectionEvent(bool aIsTrusted, uint32_t aMessage, nsIWidget* aWidget) :
-    WidgetGUIEvent(aIsTrusted, aMessage, aWidget, NS_SELECTION_EVENT),
-    mExpandToClusterBoundary(true), mSucceeded(false)
+  WidgetSelectionEvent(bool aIsTrusted, uint32_t aMessage, nsIWidget* aWidget)
+    : WidgetGUIEvent(aIsTrusted, aMessage, aWidget, NS_SELECTION_EVENT)
+    , mSeqno(kLatestSeqno)
+    , mOffset(0)
+    , mLength(0)
+    , mReversed(false)
+    , mExpandToClusterBoundary(true)
+    , mSucceeded(false)
   {
   }
 
